# agentcairn

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  plugin.yml  site.yml  trivy.yml
benchmarks/: README.md
benchmarks/cairn_bench/: ablation.py  config.py  download.py  latency.py  report.py  retrieval_metrics.py  run.py
benchmarks/tests/: test_latency.py  test_metrics.py  test_qa.py
docs/plans/: 2026-06-08-02-index-and-embed.md  2026-06-08-03-search.md  2026-06-08-05-mcp.md  2026-06-09-06-benchmark-harness.md  2026-06-10-agentcairn-claude-code-plugin.md  2026-06-10-agentcairn-website.md  2026-06-10-cairn-savings.md  2026-06-10-cairn-warm.md  2026-06-11-cairn-install.md  2026-06-11-redaction-overfiring.md  2026-06-11-structural-ingestion.md  2026-06-12-layer-b-judge.md  2026-06-13-codex-plugin.md  2026-06-13-consolidation-distilled-signal.md  2026-06-14-antigravity-ingest.md  2026-06-14-cursor-ingest.md  2026-06-15-obsidian-plugin-mvp.md  2026-06-15-retrieval-latency-benchmark.md  (+4 more)
plugin/: .mcp.codex.json  .mcp.json  README.md  mcp_config.json
scripts/: eval_judge.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_auto_recall.py  test_hosts.py  test_paths.py  test_plugin_assets.py  test_plugins.py  test_recall_hook.py  test_recall_hook_cli.py  test_schedule.py  test_temporal.py  test_usage.py
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
(+151 files in other folders)
