[project]
name = "agentcairn"
version = "0.0.1"
description = "Local-first agent memory: an Obsidian markdown vault as source of truth, with a rebuildable DuckDB index."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Charles C. Figueiredo", email = "ccf@ccf.io" }]
dependencies = [
    "typer>=0.12",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "fastembed>=0.4",
    "duckdb>=1.1",
    "mcp>=1.27.2",
]

[project.scripts]
cairn = "cairn.cli:app"
agentcairn = "cairn.mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.8"]
bench = ["anthropic>=0.40", "huggingface-hub>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer.Argument/typer.Option in default positions is the intended Typer API pattern.
ignore = ["B008"]
